--- a/.env
+++ b/.env
@@ -16,11 +16,28 @@ SEED_ADMIN_EMAIL=marinaSH@gmail.com
 SEED_ADMIN_PASSWORD=12345
 SEED_ADMIN_FIRST=Марина
 SEED_ADMIN_LAST=Шпегель
+SEED_ADMIN_PHONE=+7 (495) 123-45-67
+SEED_ADMIN_DEPT=IT Support
+
+SEED_ADMIN2=true
+SEED_ADMIN2_LOGIN=support
+SEED_ADMIN2_EMAIL=support@local.test
+SEED_ADMIN2_PASSWORD=support12345
+SEED_ADMIN2_FIRST=Сергей
+SEED_ADMIN2_LAST=Иванов
+SEED_ADMIN2_PHONE=+7 (495) 999-88-88
+SEED_ADMIN2_DEPT=IT Support
+
 SEED_USER=true
 SEED_USER_LOGIN=ivan
 SEED_USER_EMAIL=ivan.petrov.21@gmail.com
 SEED_USER_PASSWORD=ivan123
 SEED_USER_FIRST=Иван
 SEED_USER_LAST=Петров
+SEED_USER_PHONE=+7 (495) 999-88-77
+SEED_USER_DEPT=IT Support
+
 SEED_TICKETS=true
 SEED_TICKETS_PER_USER=8
+
+SEED_DEPTS=true
