feat: add new handlers for basic user, clean up code project

--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,33 @@
-POSTGRES_DB=komiac_tech_support
-POSTGRES_USER=komiac_support
-POSTGRES_PASSWORD=komiac123
-POSTGRES_PORT=5432
-DATABASE_URL=postgres://komiac_support:komiac123@db:5432/komiac_tech_support?sslmode=disable
-HTTP_PORT=8080
-CORS_ORIGIN=http://localhost:5173
-COOKIE_SECURE=false
-JWT_ACCESS_SECRET=super-secret-access-change-me
-JWT_REFRESH_SECRET=super-secret-refresh-change-me
-JWT_ACCESS_TTL_MIN=15
-JWT_REFRESH_TTL_DAYS=14
-SEED_ADMIN=true
-SEED_ADMIN_LOGIN=marinaSH
-SEED_ADMIN_EMAIL=marinaSH@gmail.com
-SEED_ADMIN_PASSWORD=12345
-SEED_ADMIN_FIRST=Марина
-SEED_ADMIN_LAST=Шпегель
-SEED_ADMIN_PHONE=+7 (495) 123-45-67
-SEED_ADMIN_DEPT=IT Support
+POSTGRES_DB
+POSTGRES_USER
+POSTGRES_PASSWORD
+POSTGRES_PORT
 
-SEED_ADMIN2=true
-SEED_ADMIN2_LOGIN=support
-SEED_ADMIN2_EMAIL=support@local.test
-SEED_ADMIN2_PASSWORD=support12345
-SEED_ADMIN2_FIRST=Сергей
-SEED_ADMIN2_LAST=Иванов
-SEED_ADMIN2_PHONE=+7 (495) 999-88-88
-SEED_ADMIN2_DEPT=IT Support
+DATABASE_URL
+HTTP_PORT
+CORS_ORIGIN
+COOKIE_SECURE
+JWT_ACCESS_SECRET
+JWT_REFRESH_SECRET
+JWT_ACCESS_TTL_MIN
+JWT_REFRESH_TTL_DAYS
 
-SEED_USER=true
-SEED_USER_LOGIN=ivan
-SEED_USER_EMAIL=ivan.petrov.21@gmail.com
-SEED_USER_PASSWORD=ivan123
-SEED_USER_FIRST=Иван
-SEED_USER_LAST=Петров
-SEED_USER_PHONE=+7 (495) 999-88-77
-SEED_USER_DEPT=IT Support
+SEED_ADMIN
+SEED_ADMIN_LOGIN
+SEED_ADMIN_EMAIL
+SEED_ADMIN_PASSWORD
+SEED_ADMIN_FIRST
+SEED_ADMIN_LAST
+SEED_ADMIN_PHONE
+SEED_ADMIN_DEPT
 
-SEED_TICKETS=true
-SEED_TICKETS_PER_USER=8
+SEED_USER
+SEED_USER_LOGIN
+SEED_USER_EMAIL
+SEED_USER_PASSWORD
+SEED_USER_FIRST
+SEED_USER_LAST
+SEED_USER_PHONE
+SEED_USER_DEPT
 
-SEED_DEPTS=true
+SEED_DEPTS
